--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -68,6 +68,7 @@ $coa-wrapper-sm-maxwidth: 720px;
 $coa-color-white: #ffffff;
 $coa-color-catskill-white: #ECF1F7;
 $coa-color-black: #000000;
+$coa-color-shark-black: #212529;
 
 $coa-color-blue: #3282af;
 $coa-color-blue-light: #D9E8F6;
@@ -106,6 +107,7 @@ $coa-color-gray-lighter: #eaeaea;
 $coa-color-gray-light: #cbcbcb;
 $coa-color-gray: #919191;
 $coa-color-gray-dark: #363636;
+$coa-color-cod-gray: #171717;
 
 //magic numbers
 $coa-top-menu-max-width: 1160px;
